--- a/style/style.css
+++ b/style/style.css
@@ -467,7 +467,7 @@ img {
   }
 }
 .simplify {
-  background: hsl(12deg, 88%, 59%);
+  background: #DD370E;
   padding: 4rem;
   display: flex;
   flex-direction: column;
@@ -491,7 +491,7 @@ img {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   cursor: pointer;
   background: #fff;
-  color: hsl(12deg, 88%, 59%);
+  color: #DD370E;
   font-size: 0.8rem;
   font-weight: 700;
   text-decoration: none;
